Backport of Bug#37843 to mysql-next-mr